# ivc

./: .gitignore  LICENSE  Makefile  dkms.conf  get_winpv_headers.py  get_xen_headers.py  msbuild.ps1  symstore.ps1
debian/: changelog  control  copyright  ivc-dev.install  ivc-dkms.install.in  ivc-pipe.files  libivc0.install  rules
include/core/: ivc_ioctl_defs.h  libivc.h  libivc_debug.h  libivc_private.h  libivc_types.h  list.h  old_ringbuffer.h
include/ks/: ks_ivc_core.h  ks_platform.h
include/ks/platform/linux/: compatibility.h  ks_platform_priv.h  platform.h
include/ks/platform/windows/: Driver.h  Public.h  platform.h  wintypes.h
include/ks/platform/windows/xen/public/arch-x86/: xen.h
include/us/platform/linux/: common_defs.h  platform_defs.h
include/us/platform/windows/: us_platform.h
rpmdkms/: dkmspostinstall  dkmspostuninstall  dkmspreuninstall
scripts/: genfiles.ps1
src/: Kbuild  LICENSE  LICENSE.md5sum  LICENSE.sha256sum  Makefile  ivc.inf
src/core/: libivc.c  libivc_debug.c
src/data-structures/: ringbuffer.c  ringbuffer.h
src/ks/core/: ks_ivc_core.c
src/ks/platform/linux/: compatibility.c  platform.c
src/ks/platform/windows/: ivc.inf  ivc.sln  platform.c
src/test/us/: .gitignore  CMakeLists.txt  ivc-pipe-client.c  ivc-pipe-server.c  test_link.c  wingetopt.c  wingetopt.h
src/test/us/outdated/: echo_file_server.c  ivc_user_client_test.c  ivc_user_server_test.c  md5sum_file_client.c
src/test/us/windows/: CMakeLists.txt  ivc-pipe-client-win.c  ivc-pipe-client-win.vcxproj  ivc-pipe-client-win.vcxproj.filters  ivc-pipe-server-win.c  ivc-pipe-server-win.vcxproj  ivc-pipe-server-win.vcxproj.filters
src/us/: CMakeLists.txt
src/us/platform/linux/: us_privilege.c
src/us/platform/windows/: ivc_userspace.sln  us_platform.c
src/usivc/: .gitignore  event_controller.cpp  event_controller.h  guestcontroller.cpp  guestcontroller.h  guestmanager.cpp  guestmanager.h  ivc_client.cpp  ivc_client.h  ivcbackend.cpp  ivcbackend.h  ivcd.cpp  ivcd.pro  libivc.cpp  libivc_core.cpp  libivc_core.h  ringbuf.cpp  ringbuf.h  testserver.cpp
src/usivc/ivcdaemon/: ivcdaemon.pro
src/usivc/ivclib/: ivclib.pro
src/usivc/testserver/: testserver.pro
vs2017/ivc_driver/: ivc.vcxproj
vs2017/ivc_userspace/: ivc_userspace.vcxproj
vs2017/libivc/: libivc.vcxproj
vs2019/: ivc.sln
vs2019/ivc/: ivc.vcxproj
vs2019/ivc_userspace/: ivc_userspace.vcxproj
vs2019/libivc/: libivc.vcxproj
vs2019/package/: package.vcxproj
